#2163 overlaping fix

--- a/src/components/proposal/questionnaire/proposalReview/ProposalReview.scss
+++ b/src/components/proposal/questionnaire/proposalReview/ProposalReview.scss
@@ -161,9 +161,6 @@
         margin-top: 10vh;
         width: 50vw;
 
-        .front {
-          height: 80vh;
-        }
         .back,
         .page6,
         .page4 {
@@ -267,8 +264,6 @@
 
     .front,
     .back {
-      width: 30.5vw;
-      height: 63.8vh;
       background: var(--theme-dark-blue);
     }
 
